--- a/Styles/style.css
+++ b/Styles/style.css
@@ -32,4 +32,16 @@ p#card{
 
 div#marcas{
   background-color: #FFF0F0;
+  margin-top: 30px;  
+}
+
+a#menu{
+  color: #F61919 !important;
+}
+
+h1{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  text-align: center;
+  font-style: italic;
 }
