--- a/Styles/style.css
+++ b/Styles/style.css
@@ -56,6 +56,11 @@ div#card{
   display: flex !important;
   justify-content: center;
   align-items: center;
+  border-radius: 0 0 20px 20px;
+}
+
+div.card{
+  border: none;
 }
 
 p#card{
