--- a/Styles/perros.css
+++ b/Styles/perros.css
@@ -1,22 +1,119 @@
+* {
+	margin-right: 0px !important;
+	margin-left: 0px !important;
+	padding-right: 0px !important;
+	padding-left: 0px !important;
+}
 .buttons {
 	width: 40px;
 	height: 80px;
 	border: none;
 	background: none;
+	border-radius: 20px;
 }
 .buttons img {
 	width: 40px;
 	height: 80px;
+	border-radius: 20px;
 }
-
-.marginRightButton {
-	margin-right: 140px !important;
-	margin-top: 121px !important;
-	margin-bottom: 45px !important;
+.productImg {
+	width: 396px !important;
+	background: #ffffff 0% 0% no-repeat padding-box;
+	box-shadow: 0px 3px 6px #00000029;
+	border-radius: 30px;
+	opacity: 1;
+	margin-right: 16px !important;
+	margin-bottom: 16px;
 }
 .productImg img {
 	height: 300px;
+	margin-top: 27px !important;
+	padding: 0px !important;
+	max-width: 300px;
 }
-.border {
-	border: solid;
+.pinkBackground {
+	background: #fff0f0 0% 0% no-repeat padding-box;
+	min-height: 746px;
+	padding-bottom: 51px;
+}
+.whiteBackground {
+	min-height: 746px;
+	padding-bottom: 51px;
+}
+.cardsHeaders {
+	margin-left: 140px !important;
+	margin-right: 140px !important;
+	margin-bottom: 51px !important;
+	padding-top: 59px !important;
+}
+.cardsHeaders h1 {
+	margin: 0px !important;
+	font: normal normal 56px Segoe UI;
+	letter-spacing: 0px;
+	color: #707070;
+}
+.cards p {
+	max-width: 330px;
+	font: normal normal normal 24px Segoe UI;
+	letter-spacing: 0px;
+	margin-left: 31px !important;
+}
+p#secosBrand1,
+p#secosBrand2,
+p#secosBrand3,
+p#secosBrand4,
+p#humedosBrand1,
+p#humedosBrand2,
+p#humedosBrand3,
+p#humedosBrand4,
+p#snaksBrand1,
+p#snaksBrand2,
+p#snaksBrand3,
+p#snaksBrand4,
+p#accesoriosBrand1,
+p#accesoriosBrand2,
+p#accesoriosBrand3,
+p#accesoriosBrand4,
+p#alimentosBrand1,
+p#alimentosBrand2,
+p#alimentosBrand3,
+p#alimentosBrand4,
+p#hamsterasBrand1,
+p#hamsterasBrand2,
+p#hamsterasBrand3,
+p#hamsterasBrand4 {
+	color: #707070;
+	letter-spacing: 0px;
+}
+p#secosWeight1,
+p#secosWeight2,
+p#secosWeight3,
+p#secosWeight4,
+p#humedosWeight1,
+p#humedosWeight2,
+p#humedosWeight3,
+p#humedosWeight4,
+p#snaksWeight1,
+p#snaksWeight2,
+p#snaksWeight3,
+p#snaksWeight4,
+p#accesoriosWeight1,
+p#accesoriosWeight2,
+p#accesoriosWeight3,
+p#accesoriosWeight4,
+p#alimentosWeight1,
+p#alimentosWeight2,
+p#alimentosWeight3,
+p#alimentosWeight4,
+p#hamsterasWeight1,
+p#hamsterasWeight2,
+p#hamsterasWeight3,
+p#hamsterasWeight4 {
+	text-align: center;
+	color: #f61919;
+	font: normal normal bold 20px Segoe UI;
+	letter-spacing: 0px;
+	margin-left: 0px !important;
+	margin-right: 0px !important;
+	max-width: none !important;
 }
