--- a/Styles/styleExtra.css
+++ b/Styles/styleExtra.css
@@ -1,156 +1,179 @@
-body{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+* {
+	margin-right: 0px !important;
+	margin-left: 0px !important;
+	padding-right: 0px !important;
+	padding-left: 0px !important;
+}
+body {
+	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-div#nav{
-  background: linear-gradient(to right, #8F0a0a, #f25353, #F61919);
+div#nav {
+	background: linear-gradient(to right, #8f0a0a, #f25353, #f61919);
 }
 
-a, .dir{
-  color: whitesmoke !important
+a,
+.dir {
+	color: whitesmoke !important;
 }
 
-p.dir{
-  text-align: right;
-  padding-right: 15px;
+p.dir {
+	text-align: right;
 }
 
-a.menu{
-  color: #F61919 !important;
+a.menu {
+	color: #f61919 !important;
 }
 
-.navbar{
-  border-top-color: whitesmoke;
-  border-bottom-color: whitesmoke;
-  border-bottom-style: double;
-  border-top-style: double;
+.navbar {
+	border-top-color: whitesmoke;
+	border-bottom-color: whitesmoke;
+	border-bottom-style: double;
+	border-top-style: double;
+}
+.navbar-brand {
+	width: 200px !important;
+	height: 77px !important;
+	margin-left: 150px !important;
+}
+.navbar-brand img {
+	width: 200px !important;
+	height: 77px !important;
+}
+.navBarInfo {
+	margin-right: 140px !important;
 }
 
-div#imgnav{
-  background-image: url("/img/nav.png");
-  background-repeat: no-repeat;
-  background-position: center;
+div#imgnav {
+	background-image: url("/img/nav.png");
+	background-repeat: no-repeat;
+	background-position: center;
 }
 
-div.rosa{
-  background-color: #FFF0F0;
-  margin-top: 50px;
-  padding: 0 15px;
+div.rosa {
+	background-color: #fff0f0;
+	margin-top: 50px;
+	padding: 0 15px;
 }
 
-h1, h3{
-  font-weight: bold;
-  text-align: center;
-  font-style: italic;
-  margin-bottom: 25px !important;
+h1,
+h3 {
+	font-weight: bold;
+	text-align: center;
+	font-style: italic;
+	margin-bottom: 25px !important;
 }
 
-h2{
-  color: #707070;
+h2 {
+	color: #707070;
 }
 
-div.blanco{
-  margin-top: 50px;
-  padding: 0 15px;
+div.blanco {
+	margin-top: 50px;
+	padding: 0 15px;
 }
 
 div.clearfix {
-  clear:both;
+	clear: both;
 }
 
-div.logo{
-  width: 40%;
-  text-align: center; 
-  margin-bottom: 15px;
+div.logo {
+	width: 40%;
+	text-align: center;
+	margin-bottom: 15px;
 }
 
-div.seccion{
-  width: 25%;
-  float: left;
+div.seccion {
+	width: 25%;
+	float: left;
 }
 
-#footer{
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
+#footer {
+	margin-left: auto !important;
+	margin-right: auto !important;
+	display: block;
 }
 
-.seccion>a>h3{
-  color: #F61919;
-  font-style: italic;
-  font-size: medium;
+.seccion > a > h3 {
+	color: #f61919;
+	font-style: italic;
+	font-size: medium;
 }
 
-.seccion>p{
-  color: #707070;
-  font-size: small;
+.seccion > p {
+	color: #707070;
+	font-size: small;
 }
 
-p.info{
-  text-align: justify;
-  padding-top: 10px;
+p.info {
+	text-align: justify;
+	padding-top: 10px;
 }
 
-img.info{
-  width: 100%;
+img.info {
+	width: 100%;
 }
 
-div#cards{
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-top: 80px;
+div#cards {
+	padding-left: 5% !important;
+	padding-right: 5% !important;
+	padding-top: 80px;
 }
 
-div.card{
-  border: none;
+div.card {
+	border: none;
+	margin-left: 15px !important;
+	margin-right: 15px !important;
 }
 
-div#card{
-  background-color: #F61919;
-  height: 50px;
-  display: flex !important;
-  justify-content: center;
-  align-items: center;
-  border-radius: 0 0 20px 20px;
+div#card {
+	background-color: #f61919;
+	height: 50px;
+	display: flex !important;
+	justify-content: center;
+	align-items: center;
+	border-radius: 0 0 20px 20px;
 }
 
-p#card{
-  color: whitesmoke;
-  font-weight: bold;
-  font-size: 18px;
-  font-style: italic;
-  margin: 0 auto;
+p#card {
+	color: whitesmoke;
+	font-weight: bold;
+	font-size: 18px;
+	font-style: italic;
+	margin: 0 auto !important;
 }
 
 @media (min-width: 1024px) {
-  div.blanco, div.rosa{
-    justify-content: center;
-    display: flex;
-    align-items: center;
-  }
+	div.blanco,
+	div.rosa {
+		justify-content: center;
+		display: flex;
+		align-items: center;
+	}
 
-  div.seccion{
-    width: 15%;
-    float: left;
-    color: #F61919;
-  }
+	div.seccion {
+		width: 15%;
+		float: left;
+		color: #f61919;
+	}
 
-  div.logo{ 
-    float: left;
-  }
+	div.logo {
+		float: left;
+	}
 
-  img.info {
-    width: 30%;
-    height: auto;
-    margin: 30px;
-  }
+	img.info {
+		width: 30%;
+		height: auto;
+		margin: 30px !important;
+	}
 
-  p.info {
-    width: 70%;
-    text-align: justify;
-  }
+	p.info {
+		width: 70%;
+		text-align: justify;
+		margin-left: 30px !important;
+	}
 
-  div#cards{
-    justify-content: center;
-  }
+	div#cards {
+		justify-content: center;
+	}
 }
