--- a/Styles/style.css
+++ b/Styles/style.css
@@ -89,11 +89,12 @@ div.card {
 }
 
 .brands img {
-	border-style: 30px;
 	border: none;
 	margin-top: 20px;
 	margin-bottom: 20px;
 	border-radius: 30px;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 p#card {
