--- a/Styles/style.css
+++ b/Styles/style.css
@@ -86,15 +86,18 @@ div.card {
 	margin-right: 20px !important;
 	border: none;
 	border-radius: 30px;
+	justify-content: center !important;
 }
 
 .brands img {
 	border: none;
-	margin-top: 20px;
-	margin-bottom: 20px;
 	border-radius: 30px;
-	max-width: 100%;
-	max-height: 100%;
+	width: 300px;
+	height: 300px;
+}
+.brands {
+	width: 300px;
+	height: 300px;
 }
 
 p#card {
