--- a/Styles/perros.css
+++ b/Styles/perros.css
@@ -5,31 +5,31 @@
 	padding-left: 0px !important;
 }
 .buttons {
-	width: 40px;
-	height: 80px;
+	width: 25px;
+	height: 50px;
 	border: none;
 	background: none;
 	border-radius: 20px;
 }
 .buttons img {
-	width: 40px;
-	height: 80px;
+	width: 25px;
+	height: 50px;
 	border-radius: 20px;
 }
 .productImg {
-	width: 396px !important;
+	width: 45vw !important;
 	background: #ffffff 0% 0% no-repeat padding-box;
 	box-shadow: 0px 3px 6px #00000029;
 	border-radius: 30px;
 	opacity: 1;
-	margin-right: 16px !important;
+	margin-right: 10px !important;
+	margin-left: 10px !important;
 	margin-bottom: 16px;
 }
 .productImg img {
-	height: 300px;
 	margin-top: 27px !important;
 	padding: 0px !important;
-	max-width: 300px;
+	max-width: 38vw;
 }
 .pinkBackground {
 	background: #fff0f0 0% 0% no-repeat padding-box;
@@ -41,22 +41,20 @@
 	padding-bottom: 51px;
 }
 .cardsHeaders {
-	margin-left: 140px !important;
-	margin-right: 140px !important;
 	margin-bottom: 51px !important;
 	padding-top: 59px !important;
 }
 .cardsHeaders h1 {
 	margin: 0px !important;
-	font: normal normal 56px Segoe UI;
+	font: normal normal 30px Segoe UI;
 	letter-spacing: 0px;
 	color: #707070;
 }
 .cards p {
-	max-width: 330px;
-	font: normal normal normal 24px Segoe UI;
+	max-width: 40vw;
+	font: normal normal normal 12px Segoe UI;
 	letter-spacing: 0px;
-	margin-left: 31px !important;
+	margin-left: 20px !important;
 }
 p#secosBrand1,
 p#secosBrand2,
@@ -111,9 +109,72 @@ p#hamsterasWeight3,
 p#hamsterasWeight4 {
 	text-align: center;
 	color: #f61919;
-	font: normal normal bold 20px Segoe UI;
+	font: normal normal bold 15px Segoe UI;
 	letter-spacing: 0px;
 	margin-left: 0px !important;
 	margin-right: 0px !important;
 	max-width: none !important;
+}
+
+@media (min-width: 1024px) {
+	.buttons {
+		width: 40px;
+		height: 80px;
+	}
+	.buttons img {
+		width: 40px;
+		height: 80px;
+	}
+	.productImg {
+		width: 396px !important;
+	}
+	.productImg img {
+		height: 300px;
+		margin-top: 27px !important;
+
+		max-width: 300px;
+	}
+
+	.cardsHeaders {
+		margin-left: 140px !important;
+		margin-right: 140px !important;
+		margin-bottom: 51px !important;
+		padding-top: 59px !important;
+	}
+	.cardsHeaders h1 {
+		font: normal normal 56px Segoe UI;
+	}
+	.cards p {
+		max-width: 330px;
+		font: normal normal normal 24px Segoe UI;
+
+		margin-left: 31px !important;
+	}
+
+	p#secosWeight1,
+	p#secosWeight2,
+	p#secosWeight3,
+	p#secosWeight4,
+	p#humedosWeight1,
+	p#humedosWeight2,
+	p#humedosWeight3,
+	p#humedosWeight4,
+	p#snaksWeight1,
+	p#snaksWeight2,
+	p#snaksWeight3,
+	p#snaksWeight4,
+	p#accesoriosWeight1,
+	p#accesoriosWeight2,
+	p#accesoriosWeight3,
+	p#accesoriosWeight4,
+	p#alimentosWeight1,
+	p#alimentosWeight2,
+	p#alimentosWeight3,
+	p#alimentosWeight4,
+	p#hamsterasWeight1,
+	p#hamsterasWeight2,
+	p#hamsterasWeight3,
+	p#hamsterasWeight4 {
+		font: normal normal bold 20px Segoe UI;
+	}
 }
